Tablas usuarios posiblemente terminadas OK

--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -192,7 +192,7 @@
 										</select>
 									</div>
 									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
-										<button class="btn btn-block btn-primary" type="button" id="btnCrearActualizarUsuario">Crear</button>
+										<button class="btn btn-block btn-primary" type="button" id="btnEditarUsuario">Editar</button>
 									</div>
 									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
 										<button class="btn btn-block btn-danger" type="button" id="btnCancelarUsuario">Cancelar</button>
