Tabla usuarios (clientes - trabajadores - administradores) OK

--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -156,20 +156,10 @@
 										<input type="text" class="form-control" placeholder="Ingresar Apellido" id="txtApellidoUsuario">
 									</div>
 									<div class="form-group col-md-4 col-sm-4 col-6 p-1">
-										<select class="form-select" id="cboGeneroUsuario">
-											<!-- <option value="0" id="sinGenero">Seleccionar Género</option>
-											<option value="Masculino" id="Masculino">Masculino</option>
-											<option value="Femenino" id="Femenino">Femenino</option> -->
-										</select>
+										<select class="form-select" id="cboGeneroUsuario"></select>
 									</div>
 									<div class="form-group col-md-4 col-sm-4 col-6 p-1">
-										<select class="form-select" id="cboEstadoCivilUsuario">
-											<!-- <option value="0" id="sinEstadoCivil">Seleccionar Estado Civil</option>
-											<option value="Viudo" id="Viudo">Viudo</option>
-											<option value="Soltero" id="Soltero">Soltero</option>
-											<option value="Casado" id="Casado">Casado</option>
-											<option value="Divorciado" id="Divorciado">Divorciado</option> -->
-										</select>
+										<select class="form-select" id="cboEstadoCivilUsuario"></select>
 									</div>
 									<div class="form-group col-md-4 col-sm-4 col-4 p-1">
 										<select class="form-select" id="cboCargoUsuario"></select>
@@ -184,12 +174,7 @@
 										<input type="text" class="form-control" placeholder="Ingresar Dirección" id="txtDireccionUsuario">
 									</div>
 									<div class="form-group col-md-4 col-sm-4 p-1">
-										<select class="form-select" id="cboTipoUsuario">
-											<!-- <option value="0">Seleccionar Tipo</option>
-											<option value="1" id="1">Cliente</option>
-											<option value="2" id="2">Trabajador</option>
-											<option value="3" id="3">Administrador</option> -->
-										</select>
+										<select class="form-select" id="cboTipoUsuario"></select>
 									</div>
 									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
 										<button class="btn btn-block btn-primary" type="button" id="btnEditarUsuario">Editar</button>
@@ -228,7 +213,7 @@
 					</div>
 				</div>
 				<!-- Contenido Usuarios -->
-
+				
 				<!-- Contenido Cargo -->
 				<div class="row" id="formCargos">
 					<div class="col-12">
