API Perú incorporada

--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -141,10 +141,10 @@
 										<input type="text" class="form-control" placeholder="Ingresar DNI" id="txtDniUsuario">
 									</div>
 									<div class="form-group col-md-4 col-sm-4 p-1">
-										<input type="text" class="form-control" placeholder="Ingresar Nombre" id="txtNombreUsuario">
+										<input type="text" class="form-control" placeholder="Ingresar Nombre" id="txtNombreUsuario" disabled readonly>
 									</div>
 									<div class="form-group col-md-4 col-sm-4 p-1">
-										<input type="text" class="form-control" placeholder="Ingresar Apellido" id="txtApellidoUsuario">
+										<input type="text" class="form-control" placeholder="Ingresar Apellido" id="txtApellidoUsuario" disabled readonly>
 									</div>
 									<div class="form-group col-md-4 col-sm-4 col-6 p-1">
 										<select class="form-select" id="cboGeneroUsuario"></select>
