Iniciando JS mascotas

--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -242,7 +242,7 @@
 										<select class="form-select" id="cboCondicionMascota"></select>
 									</div>
 									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
-										<button class="btn btn-block btn-primary" type="button" id="btnCrearActualizarMascota">Editar</button>
+										<button class="btn btn-block btn-primary" type="button" id="btnCrearActualizarMascota">Crear</button>
 									</div>
 									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
 										<button class="btn btn-block btn-danger" type="button" id="btnCancelarMascota">Cancelar</button>
