--- a/Web/index.html
+++ b/Web/index.html
@@ -428,7 +428,7 @@
                                 <li><a href="#" rel="nofollow" target="">Registro de mascotas</a></li>
                                 <li><a href="./consultas/" rel="nofollow" target="_blank">Consultas en línea</a></li>
                                 <li><a href="./ubicanos/" rel="nofollow" target="_blank">Nuestras sedes</a></li>
-                                <li><a href="#" rel="nofollow" target="">Nuestro equipo</a></li>
+                                <li><a href="./equipo/" rel="nofollow" target="">Nuestro equipo</a></li>
                             </ul>
                         </div>
                     </div>
