Página de nuestro equipo OK

--- a/Web/equipo/index.html
+++ b/Web/equipo/index.html
@@ -115,8 +115,7 @@
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-1.jpg);">
-							</div>
+							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-1.jpg);"></div>
 						</div>
 						<div class="text pt-3 px-3 pb-4 text-center">
 							<h3>Ivan Lopez</h3>
@@ -127,8 +126,7 @@
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-2.jpg);">
-							</div>
+							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-2.jpg);"></div>
 						</div>
 						<div class="text pt-3 px-3 pb-4 text-center">
 							<h3>Maycoll Yupanqui</h3>
@@ -139,8 +137,7 @@
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-3.jpg);">
-							</div>
+							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-3.jpg);"></div>
 						</div>
 						<div class="text pt-3 px-3 pb-4 text-center">
 							<h3>Brayan Salcedo</h3>
@@ -151,8 +148,7 @@
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-4.jpg);">
-							</div>
+							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-4.jpg);"></div>
 						</div>
 						<div class="text pt-3 px-3 pb-4 text-center">
 							<h3>Jhon de la Cruz</h3>
@@ -164,8 +160,7 @@
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-5.jpg);">
-							</div>
+							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-5.jpg);"></div>
 						</div>
 						<div class="text pt-3 px-3 pb-4 text-center">
 							<h3>Luis Ramos</h3>
@@ -176,8 +171,7 @@
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-6.jpg);">
-							</div>
+							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-6.jpg);"></div>
 						</div>
 						<div class="text pt-3 px-3 pb-4 text-center">
 							<h3>Mirella Vasquez</h3>
@@ -188,8 +182,7 @@
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-7.jpg);">
-							</div>
+							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-7.jpg);"></div>
 						</div>
 						<div class="text pt-3 px-3 pb-4 text-center">
 							<h3>Daniel Tello</h3>
@@ -200,8 +193,7 @@
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-8.jpg);">
-							</div>
+							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-8.jpg);"></div>
 						</div>
 						<div class="text pt-3 px-3 pb-4 text-center">
 							<h3>Javier Resto</h3>
